@@ -1,3 +1,7 @@
+2021-09-25 Danilo Chang
+
+	* Apply Christian's patch (POC thread support)
+
 2021-09-24 Danilo Chang
 
 	* Implement command: minMaxIdx
